# recommend-by-behaviour

./: .gitignore  Dockerfile  README.MD  README.md  main.py  pyproject.toml  requirements.txt
data/: cat.csv
notebook/: baseline.ipynb
solution/: recommends.ipynb  solution.ipynb
src/: decorators.py  logger.py  utils.py
src/stages/: add_recos.py  add_similar.py  base_filtering.py  etl.py  helpers.py  prediction.py
src/tools/: classificator.py  estimator.py  rectool.py
