[tool.poetry]
name = "kokos-hack"
version = "0.1.0"
description = ""
authors = ["Ivan Andriushin <i.andryushin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
pandas = "^2.2.2"
pytz = "^2023.3"
scikit-learn = "1.5.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
polars = "^1.5.0"
lightgbm = "^4.5.0"
mlflow = "^2.16.2"
dvc = "^3.55.2"

[tool.poetry.group.dev.dependencies]
notebook = "<7"
ipywidgets = "^8.1.3"
python-lsp-server = "^1.11.0"
jupyterlab = "^4.2.2"
jupyterlab-lsp = "^5.1.0"
jupyterlab-execute-time = "^3.1.2"
jupyter-contrib-nbextensions = "^0.7.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
traitlets = "5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true